# stunt-double

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  conf.py  index.md  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/architecture/: overview.doctree
docs/_build/html/.doctrees/guides/: call-recording.doctree  context-aware-mocks.doctree  langgraph-integration.doctree  matchers-and-resolvers.doctree  mcp-mirroring.doctree  mock-builder.doctree  quickstart.doctree  signature-validation.doctree
docs/_build/html/.doctrees/reference/: dependencies.doctree  mock-format.doctree  schema-validation.doctree
docs/_build/html/_sources/: index.md.txt
docs/_build/html/_sources/architecture/: overview.md.txt
docs/_build/html/_sources/guides/: call-recording.md.txt  matchers-and-resolvers.md.txt  mcp-mirroring.md.txt  mock-builder.md.txt  quickstart.md.txt
docs/_build/html/_sources/reference/: dependencies.md.txt  mock-format.md.txt  schema-validation.md.txt
docs/_build/html/architecture/: overview.html
docs/_build/html/guides/: call-recording.html  context-aware-mocks.html  langgraph-integration.html  matchers-and-resolvers.html  mcp-mirroring.html  mock-builder.html  quickstart.html  signature-validation.html
docs/_build/html/reference/: dependencies.html  mock-format.html  schema-validation.html
docs/guides/: context-aware-mocks.md  langgraph-integration.md  mcp-mirroring.md  multi-tool-agent-tutorial.md  quickstart.md  signature-validation.md
docs/reference/: dependencies.md
src/stuntdouble/: __init__.py  builder.py  config.py  exceptions.py  matching.py  mock_registry.py  recorder.py  resolving.py  scenario_mocking.py  types.py  validation.py  wrapper.py
src/stuntdouble/mirroring/: __init__.py  cache.py  discovery.py  mcp_client.py  mcp_utils.py  mirror.py  mirror_registry.py  models.py  strategies.py
src/stuntdouble/mirroring/generation/: __init__.py  base.py  entity.py  presets.py  responses.py
src/stuntdouble/mirroring/integrations/: __init__.py  langchain.py  llm.py
tests/: conftest.py  test_builder.py  test_config.py  test_exceptions.py  test_matching.py  test_mocking.py  test_recorder.py  test_resolving.py  test_scenario_mocking.py  test_validation.py  test_version.py  test_wrapper.py
tests-e2e/: test_integration.py
tests/mirroring/: conftest.py  test_discovery.py  test_langchain_adapter.py  test_llm_provider.py  test_mcp_client.py  test_mirror.py  test_mirror_registry.py  test_mock_strategy_enum.py  test_presets.py  test_response_cache.py  test_strategies.py
