[project]
name = "stuntdouble"
version = "2.0.3"
description = "Tool mocking framework for AI agent testing"
requires-python = ">= 3.12"
license = "MIT"
authors = [{ name = "Benjamin Benchaya" }]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langchain-core>=1.2.5,<2",
    "pydantic>=2.0.0,<3",
    "langgraph>=1.0.0,<2",
]

[project.optional-dependencies]
mcp = ["aiohttp>=3.9.0,<4"]

[dependency-groups]
dev = ["pytest>=9.0.0,<10", "pytest-cov>=7.0.0,<8", "pytest-xdist>=3.8.0,<4", "pytest-asyncio>=1.3.0,<2", "mypy>=1.19.0,<2", "ruff>=0.15.0,<1", "langchain-openai>=1.1.0,<2"]
docs = ["sphinx>=9.0.0,<10", "myst-parser>=5.0.0,<6", "sphinx-rtd-theme>=3.0.0,<4", "sphinx-copybutton>=0.5.0,<1"]

[build-system]
requires = ["hatchling>=1.29.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stuntdouble"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N815"]

[tool.ruff.lint.isort]
known-first-party = ["stuntdouble"]

[project.urls]
Homepage = "https://github.com/stuntdouble/stuntdouble"
Documentation = "https://github.com/stuntdouble/stuntdouble/tree/main/docs"
Source = "https://github.com/stuntdouble/stuntdouble"
Issues = "https://github.com/stuntdouble/stuntdouble/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
